syntax = "proto3";

package pb;

import "score_sheet.proto";

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message UpdateScoreSheetRequest {
  int32 score_sheet_id = 1;
  optional string name = 2;
  optional string committee_name = 3;
  optional string chair = 4;
  optional string vice_chair = 5;
  optional string rapporteur = 6;
}

message UpdateScoreSheetResponse {
  ScoreSheet score_sheet = 1;
}