syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message ScoreSheet {
  int32 id = 1;
  string name = 2;
  string committee_name = 3;
  string chair = 4;
  string vice_chair = 5;
  string rapporteur = 6;
  int32 created_by = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}